feat: Application Log viewer
Now Admin can inspect the log files

Some settings are available to set the refresh time or the desired log level

You can save these settings to ensure your next use will use the same settings
