# config/packages/nelmio_api_doc.yaml
@@ -1024,6 +1024,44 @@ nelmio_api_doc:
           summary: Update a group by ID
           tags:
           - Groups
+      /api/logs/fetch:
+        post:
+          operationId: api_logs_fetch
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    filePath:
+                      type: string
+          responses:
+            '200':
+              content:
+                application/hal+json:
+                  schema:
+                    type: object
+                    properties:
+                      logs:
+                        type: array
+                        items:
+                          type: text
+              description: OK
+            '400':
+              $ref: '#/components/responses/400'
+            '401':
+              $ref: '#/components/responses/401'
+            '403':
+              $ref: '#/components/responses/403'
+            '404':
+              $ref: '#/components/responses/404'
+            '405':
+              $ref: '#/components/responses/405'
+            '500':
+              $ref: '#/components/responses/500'
+          summary: Fetch logs
+          tags:
+          - Logs
       /api/me:
         get:
           operationId: getProfile
